--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fontsource/oxygen": "^5.0.12",
     "@fortawesome/fontawesome-free": "^6.5.2",
     "animate.css": "^4.1.1",
+    "axios": "^1.6.8",
     "clsx": "^2.1.0",
     "daisyui": "^4.10.2",
     "next": "14.1.4",
