--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@fontsource/oxygen": "^5.0.12",
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@reduxjs/toolkit": "^2.2.5",
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^3.4.1",
     "animate.css": "^4.1.1",
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
@@ -21,9 +24,15 @@
     "react-easy-swipe": "^0.0.23",
     "react-icons": "^5.0.1",
     "react-paginate": "^8.2.0",
-    "react-responsive-carousel": "^3.2.23"
+    "react-redux": "^9.1.2",
+    "react-responsive-carousel": "^3.2.23",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
+    "sharp": "^0.33.4",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/react": "18.3.3",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
