--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/node": "^20.13.0",
     "@types/react": "18.3.3",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
