--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,3 @@
 {
-  "extends": "next/core-web-vitals",
-  "rules": {
-    "no-console": "off", // Example: Turn off the 'no-console' rule
-    "react/react-in-jsx-scope": "off", // Example: Turn off the rule for React in JSX scope
-    "no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }], // Example: Warn for unused variables but ignore args starting with _
-    "quotes": ["error", "single"], // Example: Enforce single quotes for strings
-    "semi": ["error", "always"] // Example: Enforce semicolons at the end of statements
-  }
+  "extends": "next/core-web-vitals"
 }
