--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-easy-swipe": "^0.0.23",
     "react-icons": "^5.0.1",
+    "react-no-ssr": "^1.1.0",
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
     "react-responsive-carousel": "^3.2.23",
